# SpinLock

src/: CMakeLists.txt  spinlock.cpp
tests/: CMakeLists.txt  tests.cpp
